Use elm-webpack-loader

--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "license": "Unlicense",
   "dependencies": {
     "@panosoft/elm-native-helpers": "^0.1.7"
+  },
+  "devDependencies": {
+    "elm-webpack-loader": "^3.0.6",
+    "html-loader": "^0.4.4"
   }
 }
