--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "websockets",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "description": "Alternative Websocket Client Effects Manager for Elm",
   "author": "Charles Scalfani",
   "license": "Unlicense",
   "dependencies": {
-    "@panosoft/elm-native-helpers": "^0.1.7"
+    "@panosoft/elm-native-helpers": "^0.1.10"
   },
   "devDependencies": {
-    "elm-webpack-loader": "^3.0.6",
-    "html-loader": "^0.4.4"
+    "elm-webpack-loader": "^3.1.0",
+    "html-loader": "^0.4.4",
+	"glob": "^7.1.1"
   }
 }
