--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "websockets",
-  "version": "0.0.0",
+  "name": "@panosoft/elm-websocket-client",
+  "version": "6.0.0",
   "description": "Alternative Websocket Client Effects Manager for Elm",
   "author": "Charles Scalfani",
   "license": "Unlicense",
